--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,3 +1,5 @@
+@import '@/app/globals.scss';
+
 .root {
   position: sticky;
   top: 0;
@@ -43,4 +45,12 @@
 
 .card {
   display: block;
+}
+
+.cart {
+  @apply relative;
+
+  .cart-count {
+    @apply flex items-center justify-center h-5 w-5 p-[1px] rounded-full absolute -top-1 -right-2 bg-white text-[#1B6392] text-xs font-medium;
+  }
 }
